add changes made

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
    <link href="css/styles.css" rel="stylesheet" type="text/css">
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <script src="js/scripts.js"></script>
     <style type="text/css">
   <!--
@@ -40,13 +42,56 @@
   </style>
   </head>
   <body>
+  <nav>
+
+
+    <div class="jumbotron">
   <div id="navbar">
     <ul>
-  	<li><a href="home">HOME</a></li>
-  	<li><a href="lights">LADIES</a></li>
-  	<li><a href="about">ABOUT</a></li>
-  	<li><a href="contacts">CONTACTS</a></li>
+  	<li><a href="index.html" class="active x">HOME</a></li>
+  	<li><a href="ladies.html" class="x">LADIES</a></li>
+  	<li><a href="about.html" class="x">ABOUT</a></li>
+  	<li><a href="contacts.html" class="x">CONTACTS</a></li>
     </ul>
   </div>
+  </nav>
 
-    <h1 class="animated infinite pulse delay-2s">$FUTURE LIGHTS$</h1>
+
+    <h1 class="animated infinite pulse delay-2s">*FUTURE LIGHTS*</h1>
+    <p>We have grown together.
+      <br>
+      We have seen each others' flaws.
+      <br>
+       We loved
+       <br>
+       We hated
+       <br>
+       We laughed
+        <br>
+        We cried
+        <br>
+       It was a cycle just like life is
+       <br>
+       A lot happened and,
+       <br>
+       People got closer,
+       <br>
+        Others drifted apart.
+         <br>
+         It was sad,
+         <br>
+       To see people angry with each other.
+       <br>
+        We thought that,
+        <br>
+       We didn't need each other,
+       <br>
+        But look at us now.
+        <br>
+       It's evident that we care about each other,
+       <br>
+        Even though,
+        <br>
+       We don't show it.
+       <br>
+       May God guide us every step of the way.</p>
